# Sea-Bottle-Jackal

./: .gitignore  .pypirc  .readthedocs.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  dodo.py  jackalify.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: pylint.yml  tests.yml
docs/: Makefile  app.rst  backend.rst  conf.py  index.rst  jackal.rst  jackalify.rst  main.rst  sea_bottle_jackal.rst  seam_carve.rst
docs/_static/: style.css
jackalify/: __init__.py  __main__.py  app.py  jackal.py  sea_bottle_jackal.py
locales/: babel-mapping.ini
locales/en/LC_MESSAGES/: jackalify.po  src.po
locales/ru/LC_MESSAGES/: jackalify.po  src.po
src/: __init__.py  __main__.py  jackalify.py  main.py  seaBottleJackal.py
src/backend/: __init__.py  jackalify.py  seam_carve.py
src/fastapi/: main.py
src/fastapi/static/css/: style.css
src/fastapi/static/js/: scripts.js
src/fastapi/templates/: main_form.html
test/: __init__.py  test_api.py  test_backend.py  test_cli.py
tests/: test_backend.py  test_cli.py  test_style.py
