[metadata]
name = jackalify

[options]
packages = jackalify
install_requires = 
    opencv-python
    aiofiles
    fastapi
    tqdm
    pillow
    jinja2
    python-multipart
    uvicorn

[options.entry_points]
console_scripts =
    jackalify = jackalify:main

[options.package_data]
* = 
    */*/*/*.mo 
    static/*/* 
    templates/*