[metadata]
name = jackalify
version = 0.1.1
url = https://github.com/Sea-Bottle/Sea-Bottle-Jackal
author = Max Raenchuk, Anastasiya Bogatenkova, Yaroslav Zykin, Ilya Mushkin
licence = MIT License
description = Jackalifying pictures!
long_description = file: README.md
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3

[options]
packages = jackalify
install_requires = 
    opencv-python
    aiofiles
    fastapi
    tqdm
    pillow
    jinja2
    python-multipart
    uvicorn

[options.entry_points]
console_scripts =
    jackalify = jackalify:main

[options.package_data]
* = 
    */*/*/*.mo 
    static/*/* 
    templates/*